SKIE/acceptance-tests/functional/src/test/resources/tests/functions/deprecation/error/suspend/wrapper_is_unavailable.swift
# SwiftCompilationError(error: 'foo()' is unavailable: Some error)

try! await foo()
